# aboba-service

./: .env.staging  .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_bucket.py  docker-compose-staging.yml  pyproject.toml  pytest.ini
.docker/dev/api/: Dockerfile
.docker/dev/mysql/: Dockerfile  my.cnf
.docker/dev/nginx/: nginx.conf
.github/workflows/: main.yml
aboba/: __init__.py  config.py  conftest.py  dependency.py  manage.py  utils.py
aboba/aboba/: settings.py  urls.py  wsgi.py
aboba/accounts/: serializers.py  urls.py  views.py
aboba/accounts/migrations/: 0001_initial.py
aboba/infrastructure/broker/: __init__.py  accessor.py
aboba/notification/: service.py
aboba/notification/repository/: __init__.py  consumer.py  producer.py
aboba/posts/: models.py  serializers.py  urls.py  views.py
aboba/posts/migrations/: 0001_initial.py
api/: pyproject.toml
api/aboba/: config.py  conftest.py  constants.py
api/aboba/aboba/: asgi.py  settings.py  urls.py
api/aboba/accounts/: serializers.py  urls.py  views.py
api/aboba/broker/: __init__.py  consumer.py  producer.py
api/aboba/config/: config.py
api/src/aboba/aboba/: settings.py  urls.py
api/tests/units/accounts/: test_user_login.py  test_user_registration.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: Comments.js  Footer.js  Header.js  LoginPage.js  Main.js  MemesGallery.js  RegisterPage.js  UploadMeme.js  VideoPlayer.js
frontend/src/services/: api.js
frontend/src/store/: authSlice.js  commentsSlice.js  index.js  passwordSlice.js  videoSlice.js
frontend/src/utils/: config.js  tokenManager.js
helmChart/: pvc-percona  values.yaml
helmChart/templates/: deployment-backend.yaml  deployment-frontend.yaml  deployment-minio.yaml  deployment-perconadb  ingress.yaml
tests/units/accounts/: test_user_login.py  (+1 more)
(+11 files in other folders)
