[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["S4toriX <nesterov.fortech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"
djangorestframework-simplejwt = "^5.3.1"
pytest = "^8.3.3"
psycopg2-binary = "^2.9.10"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
